# translate-funny-languages-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  translate-funny-languages.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  (+3 more)
php/: AGENTS.md  (+7 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  translatefunnylanguages_sdk.py  translatefunnylanguages_types.py
py/core/: context.py  control.py  error.py  helpers.py  response.py
py/entity/: translator_entity.py
py/feature/: audit_feature.py  base_feature.py  debug_feature.py  idempotency_feature.py  metrics_feature.py  netsim_feature.py  proxy_feature.py  ratelimit_feature.py  retry_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_translator_direct.py  test_translator_entity.py
py/utility/: done.py  feature_add.py  feature_init.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_method.py  prepare_params.py  prepare_query.py  register.py  result_basic.py
(+407 files in other folders)
